Merkle tree integration (#3)
* merkle tree version

* adjusted to new mt

* on-chain anf off-chain code for Merkle Trees

* adjusted to new merkle tree interface

* added deserialisation as well

* changes to the new interface

* refactoring to new names

* proof with generics

* code quality improvements

* added from_hashes function

* refactoring to use list.and

* moved to list.and

* refactoring to List.and

* generated with aiken from branch (that fixes blueprint generation issue on recursive types

* aiken compiled merkle trees.

* we don't need any in ReduceVoteBatchRedeemer anymore

* bug fix

* (FromAlonzoUtxoFail (InsufficientCollateral (Coin 920162) (Coin 922802))))])

* Added a custom balanceTx() TxBuilder to fix insufficient collateral in VoteBatcher

* Use LargestFirstUtxosSelectionStrategy for collateral utxo selction to avoid too many collateral utxo error

* make simple one work

* git commit -m "merkle tree creation and reduction of batches work on L1 (probe of 90 votes)"

* assert results are correct

* removed tests

---------

Co-authored-by: Mateusz Czeladka <mateusz.czeladka@cardanofoundation.org>
Co-authored-by: Mateusz Czeladka <mateusz.szczap[at]gmail.com>
Co-authored-by: Satya <satran004@gmail.com>