@@ -5,12 +5,9 @@ import com.bloxbean.cardano.client.api.ProtocolParamsSupplier;
 import com.bloxbean.cardano.client.api.TransactionProcessor;
 import com.bloxbean.cardano.client.api.UtxoSupplier;
 import com.bloxbean.cardano.client.api.model.Amount;
-import com.bloxbean.cardano.client.api.model.Result;
-import com.bloxbean.cardano.client.api.model.Utxo;
-import com.bloxbean.cardano.client.coinselection.UtxoSelectionStrategy;
 import com.bloxbean.cardano.client.coinselection.impl.DefaultUtxoSelectionStrategyImpl;
+import com.bloxbean.cardano.client.coinselection.impl.LargestFirstUtxoSelectionStrategy;
 import com.bloxbean.cardano.client.function.Output;
-import com.bloxbean.cardano.client.function.TxBuilder;
 import com.bloxbean.cardano.client.function.TxBuilderContext;
 import com.bloxbean.cardano.client.function.helper.BalanceTxBuilders;
 import com.bloxbean.cardano.client.function.helper.CollateralBuilders;
@@ -19,17 +16,21 @@ import com.bloxbean.cardano.client.function.helper.ScriptCallContextProviders;
 import com.bloxbean.cardano.client.function.helper.model.ScriptCallContext;
 import com.bloxbean.cardano.client.plutus.api.PlutusObjectConverter;
 import com.bloxbean.cardano.client.plutus.impl.DefaultPlutusObjectConverter;
-import com.bloxbean.cardano.client.transaction.spec.*;
+import com.bloxbean.cardano.client.transaction.spec.CostMdls;
+import com.bloxbean.cardano.client.transaction.spec.ExUnits;
+import com.bloxbean.cardano.client.transaction.spec.Language;
+import com.bloxbean.cardano.client.transaction.spec.RedeemerTag;
 import com.bloxbean.cardano.client.transaction.util.CostModelUtil;
 import com.bloxbean.cardano.client.util.JsonUtil;
-import com.bloxbean.cardano.client.util.Tuple;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import lombok.val;
 import org.cardanofoundation.hydrapoc.batch.data.input.ReduceVoteBatchRedeemer;
-import org.cardanofoundation.hydrapoc.batch.data.output.ResultBatchDatum;
 import org.cardanofoundation.hydrapoc.commands.PlutusScriptUtil;
 import org.cardanofoundation.hydrapoc.commands.TransactionUtil;
+import org.cardanofoundation.hydrapoc.common.BalanceUtil;
 import org.cardanofoundation.hydrapoc.common.OperatorAccountProvider;
+import org.cardanofoundation.merkle.core.MerkleTree;
 import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Component;
@@ -37,13 +38,12 @@ import org.springframework.stereotype.Component;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 import static com.bloxbean.cardano.client.common.ADAConversionUtil.adaToLovelace;
 import static com.bloxbean.cardano.client.common.CardanoConstants.LOVELACE;
-import static org.cardanofoundation.hydrapoc.batch.util.CountVoteUtil.groupResultBatchDatumTuples;
+import static org.cardanofoundation.hydrapoc.batch.util.CountVoteUtil.groupResultBatchDatum;
+import static org.cardanofoundation.merkle.util.Hashing.sha2_256;
 
 @Component
 @RequiredArgsConstructor
@@ -64,35 +64,40 @@ public class VoteBatchReducer {
     @Retryable(include = {RuntimeException.class},
             maxAttempts = 3,
             backoff = @Backoff(delay = 100))
-    public String postReduceBatchTransaction(int batchSize, long iteration) throws Exception {
-        PlutusV2Script voteBatcherScript = plutusScriptUtil.getVoteBatcherContract();
-        String voteBatcherScriptAddress = plutusScriptUtil.getVoteBatcherContractAddress();
-        String sender = operatorAccountProvider.getOperatorAddress();
+    public Optional<String> postReduceBatchTransaction(int batchSize, long fromIteration) throws Exception {
+        val voteBatcherScript = plutusScriptUtil.getVoteBatcherContract();
+        val voteBatcherScriptAddress = plutusScriptUtil.getVoteBatcherContractAddress();
+        val sender = operatorAccountProvider.getOperatorAddress();
         log.info("Sender Address: " + sender);
         log.info("Script Address: " + voteBatcherScriptAddress);
 
-        List<Tuple<Utxo, ResultBatchDatum>> utxoTuples = voteUtxoFinder.getUtxosWithVoteBatches(batchSize, iteration);
+        val utxoTuples = voteUtxoFinder.getUtxosWithVoteBatches(batchSize, fromIteration);
         if (utxoTuples.size() == 0) {
             log.warn("No utxo found");
-            return null;
+            return Optional.empty();
         }
 
+        val results = utxoTuples.stream().map(t -> t._2).toList();
+        val mt = MerkleTree.createFromItems(results, r -> {
+            return sha2_256(plutusObjectConverter.toPlutusData(r).serializeToBytes());
+        });
+
         // Calculate group result batch datum
-        ResultBatchDatum reduceVoteBatchDatum = groupResultBatchDatumTuples(utxoTuples, iteration + 1);
+        val reduceVoteBatchDatum = groupResultBatchDatum(results, fromIteration + 1);
+        reduceVoteBatchDatum.setMerkleRootHash(mt.elementHash());
 
         log.info("############# Input Vote Batches ############");
-        log.info(JsonUtil.getPrettyJson(utxoTuples.stream().map(utxoVoteBatch -> utxoVoteBatch._2).collect(Collectors.toList())));
+        log.info(JsonUtil.getPrettyJson(results));
         log.info("########### Reduced Result Datum #############");
         log.info(JsonUtil.getPrettyJson(reduceVoteBatchDatum));
 
         // Build and post contract txn
-        UtxoSelectionStrategy utxoSelectionStrategy = new DefaultUtxoSelectionStrategyImpl(utxoSupplier);
-        Set<Utxo> collateralUtxos =
-                utxoSelectionStrategy.select(sender, new Amount(LOVELACE, adaToLovelace(10)), Collections.emptySet());
+        val utxoSelectionStrategy = new LargestFirstUtxoSelectionStrategy(utxoSupplier);
+        val collateralUtxos = utxoSelectionStrategy.select(sender, new Amount(LOVELACE, adaToLovelace(1000)), Collections.emptySet());
 
         // Build the expected output
-        PlutusData outputDatum = plutusObjectConverter.toPlutusData(reduceVoteBatchDatum);
-        Output output = Output.builder()
+        val outputDatum = plutusObjectConverter.toPlutusData(reduceVoteBatchDatum);
+        val output = Output.builder()
                 .address(voteBatcherScriptAddress)
                 .datum(outputDatum)
                 .inlineDatum(true)
@@ -100,10 +105,10 @@ public class VoteBatchReducer {
                 .qty(adaToLovelace(1))
                 .build();
 
-        List<Utxo> scriptUtxos = utxoTuples.stream().map(utxoVoteDatumTuple -> utxoVoteDatumTuple._1)
-                .collect(Collectors.toList());
+        val scriptUtxos = utxoTuples.stream().map(utxoVoteDatumTuple -> utxoVoteDatumTuple._1)
+                .toList();
 
-        List<ScriptCallContext> scriptCallContexts = scriptUtxos.stream().map(utxo -> ScriptCallContext
+        val scriptCallContexts = scriptUtxos.stream().map(utxo -> ScriptCallContext
                 .builder()
                 .script(voteBatcherScript)
                 .utxo(utxo)
@@ -111,41 +116,41 @@ public class VoteBatchReducer {
                         .mem(BigInteger.valueOf(0))
                         .steps(BigInteger.valueOf(0))
                         .build())
-                .redeemer(plutusObjectConverter.toPlutusData(ReduceVoteBatchRedeemer.create(iteration)))
-                .redeemerTag(RedeemerTag.Spend).build()).collect(Collectors.toList());
+                .redeemer(plutusObjectConverter.toPlutusData(ReduceVoteBatchRedeemer.create(mt, fromIteration)))
+                .redeemerTag(RedeemerTag.Spend).build())
+                .toList();
 
-        TxBuilder txBuilder = output.outputBuilder()
+        var txBuilder = output.outputBuilder()
                 .buildInputs(InputBuilders.createFromUtxos(scriptUtxos, sender))
-                .andThen(CollateralBuilders.collateralOutputs(sender, new ArrayList<>(collateralUtxos))); //CIP-40
+                .andThen(CollateralBuilders.collateralOutputs(sender, new ArrayList<>(collateralUtxos))); // CIP-40
 
-        // Loop and add scriptCallContexts
-        for (var scriptCallContext : scriptCallContexts) {
+        for (val scriptCallContext : scriptCallContexts) {
             txBuilder = txBuilder.andThen(ScriptCallContextProviders.createFromScriptCallContext(scriptCallContext));
         }
 
         txBuilder = txBuilder.andThen((context, txn) -> {
-                    TxEvaluator txEvaluator = new TxEvaluator();
-                    CostMdls costMdls = new CostMdls();
+                    val txEvaluator = new TxEvaluator();
+                    val costMdls = new CostMdls();
                     costMdls.add(CostModelUtil.getCostModelFromProtocolParams(protocolParamsSupplier.getProtocolParams(), Language.PLUTUS_V2).orElseThrow());
-                    List<Redeemer> evalReedemers = txEvaluator.evaluateTx(txn, context.getUtxos(), costMdls);
 
-                    List<Redeemer> redeemers = txn.getWitnessSet().getRedeemers();
-                    for (Redeemer redeemer : redeemers) { // Update costs
+                    val evalReedemers = txEvaluator.evaluateTx(txn, context.getUtxos(), costMdls);
+
+                    val redeemers = txn.getWitnessSet().getRedeemers();
+                    for (val redeemer : redeemers) { // Update costs
                         evalReedemers.stream().filter(evalReedemer -> evalReedemer.getIndex().equals(redeemer.getIndex()))
                                 .findFirst()
                                 .ifPresent(evalRedeemer -> redeemer.setExUnits(evalRedeemer.getExUnits()));
                     }
 
-                    // Remove all scripts from witness and just add one
                     txn.getWitnessSet().getPlutusV2Scripts().clear();
                     txn.getWitnessSet().getPlutusV2Scripts().add(plutusScriptUtil.getVoteBatcherContract());
                 })
-                .andThen(BalanceTxBuilders.balanceTx(sender, 1));
+                .andThen(BalanceUtil.balanceTx(sender, 1));
 
-        TxBuilderContext txBuilderContext = TxBuilderContext.init(utxoSupplier, protocolParamsSupplier);
-        Transaction transaction = txBuilderContext.buildAndSign(txBuilder, operatorAccountProvider.getTxSigner());
+        val txBuilderContext = TxBuilderContext.init(utxoSupplier, protocolParamsSupplier);
+        val transaction = txBuilderContext.buildAndSign(txBuilder, operatorAccountProvider.getTxSigner());
 
-        Result<String> result = transactionProcessor.submitTransaction(transaction.serialize());
+        val result = transactionProcessor.submitTransaction(transaction.serialize());
         if (!result.isSuccessful()) {
             throw new RuntimeException("Transaction failed. " + result.getResponse());
         }
@@ -154,7 +159,7 @@ public class VoteBatchReducer {
 
         transactionUtil.waitForTransaction(result);
 
-        return result.getValue();
+        return Optional.of(result.getValue());
     }
 
 }
