@@ -5,34 +5,33 @@ import com.bloxbean.cardano.client.api.ProtocolParamsSupplier;
 import com.bloxbean.cardano.client.api.TransactionProcessor;
 import com.bloxbean.cardano.client.api.UtxoSupplier;
 import com.bloxbean.cardano.client.api.model.Amount;
-import com.bloxbean.cardano.client.api.model.Result;
-import com.bloxbean.cardano.client.api.model.Utxo;
-import com.bloxbean.cardano.client.coinselection.UtxoSelectionStrategy;
-import com.bloxbean.cardano.client.coinselection.impl.DefaultUtxoSelectionStrategyImpl;
+import com.bloxbean.cardano.client.coinselection.impl.LargestFirstUtxoSelectionStrategy;
 import com.bloxbean.cardano.client.function.Output;
-import com.bloxbean.cardano.client.function.TxBuilder;
 import com.bloxbean.cardano.client.function.TxBuilderContext;
-import com.bloxbean.cardano.client.function.helper.BalanceTxBuilders;
 import com.bloxbean.cardano.client.function.helper.CollateralBuilders;
 import com.bloxbean.cardano.client.function.helper.InputBuilders;
 import com.bloxbean.cardano.client.function.helper.ScriptCallContextProviders;
 import com.bloxbean.cardano.client.function.helper.model.ScriptCallContext;
 import com.bloxbean.cardano.client.plutus.api.PlutusObjectConverter;
 import com.bloxbean.cardano.client.plutus.impl.DefaultPlutusObjectConverter;
-import com.bloxbean.cardano.client.transaction.spec.*;
+import com.bloxbean.cardano.client.transaction.spec.CostMdls;
+import com.bloxbean.cardano.client.transaction.spec.ExUnits;
+import com.bloxbean.cardano.client.transaction.spec.Language;
+import com.bloxbean.cardano.client.transaction.spec.RedeemerTag;
 import com.bloxbean.cardano.client.transaction.util.CostModelUtil;
 import com.bloxbean.cardano.client.util.JsonUtil;
-import com.bloxbean.cardano.client.util.Tuple;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import lombok.val;
 import org.cardanofoundation.hydrapoc.batch.data.input.CreateVoteBatchRedeemer;
 import org.cardanofoundation.hydrapoc.batch.data.output.ChallengeProposalDatum;
 import org.cardanofoundation.hydrapoc.batch.data.output.ResultBatchDatum;
 import org.cardanofoundation.hydrapoc.batch.data.output.ResultDatum;
 import org.cardanofoundation.hydrapoc.commands.PlutusScriptUtil;
 import org.cardanofoundation.hydrapoc.commands.TransactionUtil;
+import org.cardanofoundation.hydrapoc.common.BalanceUtil;
 import org.cardanofoundation.hydrapoc.common.OperatorAccountProvider;
-import org.cardanofoundation.hydrapoc.importvote.VoteDatum;
+import org.cardanofoundation.merkle.core.MerkleTree;
 import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Component;
@@ -40,12 +39,11 @@ import org.springframework.stereotype.Component;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 import static com.bloxbean.cardano.client.common.ADAConversionUtil.adaToLovelace;
 import static com.bloxbean.cardano.client.common.CardanoConstants.LOVELACE;
+import static org.cardanofoundation.merkle.util.Hashing.sha2_256;
 
 @Component
 @RequiredArgsConstructor
@@ -66,26 +64,30 @@ public class VoteBatcher {
     @Retryable(include = {RuntimeException.class},
             maxAttempts = 3,
             backoff = @Backoff(delay = 100))
-    public String createAndPostBatchTransaction(int batchSize) throws Exception {
-        PlutusV2Script voteBatcherScript = plutusScriptUtil.getVoteBatcherContract();
-        String voteBatcherScriptAddress = plutusScriptUtil.getVoteBatcherContractAddress();
-        String sender = operatorAccountProvider.getOperatorAddress();
+    public Optional<String> createAndPostBatchTransaction(int batchSize) throws Exception {
+        val voteBatcherScript = plutusScriptUtil.getVoteBatcherContract();
+        val voteBatcherScriptAddress = plutusScriptUtil.getVoteBatcherContractAddress();
+        val sender = operatorAccountProvider.getOperatorAddress();
+
         log.info("Sender Address: " + sender);
         log.info("Script Address: " + voteBatcherScriptAddress);
 
-        List<Tuple<Utxo, VoteDatum>> utxoTuples = voteUtxoFinder.getUtxosWithVotes(batchSize);
+        val utxoTuples = voteUtxoFinder.getUtxosWithVotes(batchSize);
         if (utxoTuples.size() == 0) {
             log.warn("No utxo found");
-            return null;
+            return Optional.empty();
         }
 
-        ResultBatchDatum resultBatchDatum = ResultBatchDatum.empty(0);
-        for (Tuple<Utxo, VoteDatum> tuple : utxoTuples) {
-            VoteDatum voteDatum = tuple._2;
-            ChallengeProposalDatum challengeProposalDatum =
-                    new ChallengeProposalDatum(voteDatum.getChallenge(), voteDatum.getProposal());
+        val resultBatchDatum = ResultBatchDatum.empty(0);
+        val voteDatums = new ArrayList<>();
 
-            ResultDatum resultDatum = resultBatchDatum.get(challengeProposalDatum);
+        for (val tuple : utxoTuples) {
+            val voteDatum = tuple._2;
+            voteDatums.add(voteDatum);
+
+            val challengeProposalDatum = new ChallengeProposalDatum(voteDatum.getChallenge(), voteDatum.getProposal());
+
+            var resultDatum = resultBatchDatum.get(challengeProposalDatum);
             if (resultDatum == null) {
                 resultDatum = new ResultDatum();
                 resultBatchDatum.add(challengeProposalDatum, resultDatum);
@@ -105,19 +107,21 @@ public class VoteBatcher {
                     log.warn("Invalid vote, " + voteDatum.getChoice());
             }
         }
+        val mt = MerkleTree.createFromItems(voteDatums, vote -> sha2_256(plutusObjectConverter.toPlutusData(vote).serializeToBytes()));
+        resultBatchDatum.setMerkleRootHash(mt.elementHash());
+
         log.info("############# Input Votes ############");
-        log.info(JsonUtil.getPrettyJson(utxoTuples.stream().map(utxoVoteDatumTuple -> utxoVoteDatumTuple._2).collect(Collectors.toList())));
+        log.info(JsonUtil.getPrettyJson(utxoTuples.stream().map(utxoVoteDatumTuple -> utxoVoteDatumTuple._2).toList()));
         log.info("########### Result Datum #############");
         log.info(JsonUtil.getPrettyJson(resultBatchDatum));
 
-        // Build and post contract txn\
-        UtxoSelectionStrategy utxoSelectionStrategy = new DefaultUtxoSelectionStrategyImpl(utxoSupplier);
-        Set<Utxo> collateralUtxos =
-                utxoSelectionStrategy.select(sender, new Amount(LOVELACE, adaToLovelace(10)), Collections.emptySet());
+        // Build and post contract txn
+        val utxoSelectionStrategy = new LargestFirstUtxoSelectionStrategy(utxoSupplier);
+        val collateralUtxos = utxoSelectionStrategy.select(sender, new Amount(LOVELACE, adaToLovelace(1000)), Collections.emptySet());
 
         // Build the expected output
-        PlutusData outputDatum = plutusObjectConverter.toPlutusData(resultBatchDatum);
-        Output output = Output.builder()
+        val outputDatum = plutusObjectConverter.toPlutusData(resultBatchDatum);
+        val output = Output.builder()
                 .address(voteBatcherScriptAddress)
                 .datum(outputDatum)
                 .inlineDatum(true)
@@ -125,53 +129,53 @@ public class VoteBatcher {
                 .qty(adaToLovelace(1))
                 .build();
 
-        List<Utxo> scriptUtxos = utxoTuples.stream().map(utxoVoteDatumTuple -> utxoVoteDatumTuple._1)
-                .collect(Collectors.toList());
+        val scriptUtxos = utxoTuples.stream().map(utxoVoteDatumTuple -> utxoVoteDatumTuple._1)
+                .toList();
 
-        List<ScriptCallContext> scriptCallContexts = scriptUtxos.stream().map(utxo -> ScriptCallContext
+        val scriptCallContexts = scriptUtxos.stream().map(utxo -> ScriptCallContext
                 .builder()
                 .script(voteBatcherScript)
                 .utxo(utxo)
-                .exUnits(ExUnits.builder()  //Exact exUnits will be calculated later
+                .exUnits(ExUnits.builder()  // Exact exUnits will be calculated later
                         .mem(BigInteger.valueOf(0))
                         .steps(BigInteger.valueOf(0))
                         .build())
-                .redeemer(plutusObjectConverter.toPlutusData(CreateVoteBatchRedeemer.create()))
-                .redeemerTag(RedeemerTag.Spend).build()).collect(Collectors.toList());
 
+                .redeemer(plutusObjectConverter.toPlutusData(CreateVoteBatchRedeemer.create(mt)))
+                .redeemerTag(RedeemerTag.Spend).build())
+                .toList();
 
-        TxBuilder txBuilder = output.outputBuilder()
+        var txBuilder = output.outputBuilder()
                 .buildInputs(InputBuilders.createFromUtxos(scriptUtxos, sender))
-                .andThen(CollateralBuilders.collateralOutputs(sender, new ArrayList<>(collateralUtxos))); //CIP-40
+                .andThen(CollateralBuilders.collateralOutputs(sender, new ArrayList<>(collateralUtxos))); // CIP-40
 
-        //Loop and add scriptCallContexts
         for (var scriptCallContext : scriptCallContexts) {
             txBuilder = txBuilder.andThen(ScriptCallContextProviders.createFromScriptCallContext(scriptCallContext));
         }
 
         txBuilder = txBuilder.andThen((context, txn) -> {
-                    TxEvaluator txEvaluator = new TxEvaluator();
-                    CostMdls costMdls = new CostMdls();
-                    costMdls.add(CostModelUtil.getCostModelFromProtocolParams(protocolParamsSupplier.getProtocolParams(), Language.PLUTUS_V2).orElseThrow());
-                    List<Redeemer> evalReedemers = txEvaluator.evaluateTx(txn, context.getUtxos(), costMdls);
+            val txEvaluator = new TxEvaluator();
+            val costMdls = new CostMdls();
+            costMdls.add(CostModelUtil.getCostModelFromProtocolParams(protocolParamsSupplier.getProtocolParams(), Language.PLUTUS_V2).orElseThrow());
+            val evalReedemers = txEvaluator.evaluateTx(txn, context.getUtxos(), costMdls);
 
-                    List<Redeemer> redeemers = txn.getWitnessSet().getRedeemers();
-                    for (Redeemer redeemer : redeemers) { //Update costs
-                        evalReedemers.stream().filter(evalReedemer -> evalReedemer.getIndex().equals(redeemer.getIndex()))
-                                .findFirst()
-                                .ifPresent(evalRedeemer -> redeemer.setExUnits(evalRedeemer.getExUnits()));
-                    }
+            val redeemers = txn.getWitnessSet().getRedeemers();
+            for (val redeemer : redeemers) { //Update costs
+                evalReedemers.stream().filter(evalReedemer -> evalReedemer.getIndex().equals(redeemer.getIndex()))
+                        .findFirst()
+                        .ifPresent(evalRedeemer -> redeemer.setExUnits(evalRedeemer.getExUnits()));
+            }
 
-                    // Remove all scripts from witness and just add one
-                    txn.getWitnessSet().getPlutusV2Scripts().clear();
-                    txn.getWitnessSet().getPlutusV2Scripts().add(plutusScriptUtil.getVoteBatcherContract());
-                })
-                .andThen(BalanceTxBuilders.balanceTx(sender, 1));
+            // Remove all scripts from witness and just add one
+            txn.getWitnessSet().getPlutusV2Scripts().clear();
+            txn.getWitnessSet().getPlutusV2Scripts().add(plutusScriptUtil.getVoteBatcherContract());
+        })
+        .andThen(BalanceUtil.balanceTx(sender, 1));
 
-        TxBuilderContext txBuilderContext = TxBuilderContext.init(utxoSupplier, protocolParamsSupplier);
-        Transaction transaction = txBuilderContext.buildAndSign(txBuilder, operatorAccountProvider.getTxSigner());
+        val txBuilderContext = TxBuilderContext.init(utxoSupplier, protocolParamsSupplier);
+        val transaction = txBuilderContext.buildAndSign(txBuilder, operatorAccountProvider.getTxSigner());
 
-        Result<String> result = transactionProcessor.submitTransaction(transaction.serialize());
+        val result = transactionProcessor.submitTransaction(transaction.serialize());
         if (!result.isSuccessful()) {
             throw new RuntimeException("Transaction failed. " + result.getResponse());
         }
@@ -180,7 +184,7 @@ public class VoteBatcher {
 
         transactionUtil.waitForTransaction(result);
 
-        return result.getValue();
+        return Optional.of(result.getValue());
     }
 
 }
